--- a/index.html
+++ b/index.html
@@ -1,30 +1,60 @@
-<html>
-  <body>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+  <head>
+    <title>yayhoo</title>
+  </head>
+  <body background="stars.gif" text="white">
     <table width="100%">
       <tr>
-	<th colspan="3"><h1>yayhoo</h1></th>
+	<th colspan="3"><img src="newspaper.gif" align="left"><font color="yellow" size="30">yayhoo</font><img src="newspaper.gif" align="right"></th>
       </tr>
       <tr>
-	<th align="center">Technology</th>
-	<th align="center">Music</th>
-	<th align="center">Other</th>
+	<th align="center"><font color="red">Technology</font></th>
+	<th align="center"><font color="red">Music</font></th>
+	<th align="center"><font color="red">Other</font></th>
       <tr>
 	<td>
+	  
 	  <ul>
-	    <li><a href="http://news.ycombinator.com">news.ycombinator.com</a></li>
+	    <li><a href="http://news.ycombinator.com"><font color="white">news.ycombinator.com</font></a></li>
 	  </ul>
 	</td>
 	<td>
 	  <ul>
-	    <li><a href="http://magictransistor.com/radio">magictransistor.com/radio</a></li>
+	    <li><a href="http://magictransistor.com/radio"><font color="white">magictransistor.com/radio</font></a></li>
 	  </ul>
 	</td>
 	<td>
 	  <ul>
-	    <li><a href="http://slatestarcodex.com/">slatestarcodex.com</a></li>
+	    <li><a href="http://slatestarcodex.com/"><font color="white">slatestarcodex.com</font></a></li>
+	    <li><a href="http://erasmatazz.com/"><font color="white">http://erasmatazz.com/</font></a></li>
 	  </ul>
 	</td>
-	
+      </tr>
+      <tr>
+	<th align="center"><font color="red">Books</font></th>
+	<th align="center"><font color="red">...</font></th>
+	<th align="center"><font color="red">...</font></th>
+      <tr>
+	<tr>
+	<td>
+	  
+	  <ul>
+	    <li><a href="https://www.metmuseum.org/art/metpublications/titles-with-full-text-online"><font color="white">https://www.metmuseum.org/art/metpublications/titles-with-full-text-online</font></a></li>
+	    <li><a href="https://www.gutenberg.org/"><font color="white">https://www.gutenberg.org/</font></a></li>
+	  </ul>
+	</td>
+	<td>
+	  <ul>
+	    <li>...</li>
+	  </ul>
+	</td>
+	<td>
+	  <ul>
+	    <li>...</li>
+	  </ul>
+	</td>
+      </tr>
     </table>
   </body>
 </html>
