--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	  
 	  <ul>
 	    <li><a href="http://news.ycombinator.com"><font color="white">news.ycombinator.com</font></a></li>
+	    <li><a href="http://ftp.rodents-montreal.org/mouse/blah/"><font color="white">http://ftp.rodents-montreal.org/mouse/blah/</font></a></li>
 	  </ul>
 	</td>
 	<td>
