cool designz and links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  
 	  <ul>
 	    <li><a href="http://news.ycombinator.com"><font color="white">news.ycombinator.com</font></a></li>
-	    <li><a href="http://ftp.rodents-montreal.org/mouse/blah/"><font color="white">http://ftp.rodents-montreal.org/mouse/blah/</font></a></li>
+	    <li><a href="http://ftp.rodents-montreal.org/mouse/blah/"><font color="white">ftp.rodents-montreal.org/mouse/blah/</font></a></li>
 	  </ul>
 	</td>
 	<td>
@@ -28,7 +28,7 @@
 	<td>
 	  <ul>
 	    <li><a href="http://slatestarcodex.com/"><font color="white">slatestarcodex.com</font></a></li>
-	    <li><a href="http://erasmatazz.com/"><font color="white">http://erasmatazz.com/</font></a></li>
+	    <li><a href="http://erasmatazz.com/"><font color="white">erasmatazz.com/</font></a></li>
 	  </ul>
 	</td>
       </tr>
@@ -41,8 +41,8 @@
 	<td>
 	  
 	  <ul>
-	    <li><a href="https://www.metmuseum.org/art/metpublications/titles-with-full-text-online"><font color="white">https://www.metmuseum.org/art/metpublications/titles-with-full-text-online</font></a></li>
-	    <li><a href="https://www.gutenberg.org/"><font color="white">https://www.gutenberg.org/</font></a></li>
+	    <li><a href="https://www.metmuseum.org/art/metpublications/titles-with-full-text-online"><font color="white">www.metmuseum.org/art/metpublications/titles-with-full-text-online</font></a></li>
+	    <li><a href="https://www.gutenberg.org/"><font color="white">www.gutenberg.org/</font></a></li>
 	  </ul>
 	</td>
 	<td>
