--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	  <ul>
 	    <li><a href="http://news.ycombinator.com"><font color="white">news.ycombinator.com</font></a></li>
 	    <li><a href="http://ftp.rodents-montreal.org/mouse/blah/"><font color="white">ftp.rodents-montreal.org/mouse/blah/</font></a></li>
+	    <li><a href="http://idlewords.com/"><font color="white">idleworlds.com</font></a></li>
 	  </ul>
 	</td>
 	<td>
