--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
+<html>
   <head>
     <title>yayhoo</title>
   </head>
   <body background="stars.gif" text="white">
     <table width="100%">
       <tr>
-	<th colspan="3"><img src="newspaper.gif" align="left"><font color="yellow" size="30">yayhoo</font><img src="newspaper.gif" align="right"></th>
+	<th colspan="3"><img src="newspaper.gif" align="left" alt="newspaper"><font color="yellow" size="30">yayhoo</font><img src="newspaper.gif" align="right" alt="newspaper"></th>
       </tr>
       <tr>
 	<th align="center"><font color="red">Technology</font></th>
@@ -35,10 +35,10 @@
       </tr>
       <tr>
 	<th align="center"><font color="red">Books</font></th>
+	<th align="center"><font color="red">News</font></th>
 	<th align="center"><font color="red">...</font></th>
-	<th align="center"><font color="red">...</font></th>
+      </tr>
       <tr>
-	<tr>
 	<td>
 	  
 	  <ul>
@@ -48,7 +48,7 @@
 	</td>
 	<td>
 	  <ul>
-	    <li>...</li>
+	    <li><a href="thin.npr.org"><font color="white">thin.npr.org</font></a></li>
 	  </ul>
 	</td>
 	<td>
