--- a/index.html
+++ b/index.html
@@ -58,5 +58,11 @@
 	</td>
       </tr>
     </table>
+    <center>
+    <p>
+    <a href="http://validator.w3.org/check?uri=referer"><img
+      src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Transitional" height="31" width="88"></a>
+    </p>
+    </center>
   </body>
 </html>
