added Games section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <tr>
 	<th align="center"><font color="red">Books</font></th>
 	<th align="center"><font color="red">News</font></th>
-	<th align="center"><font color="red">...</font></th>
+	<th align="center"><font color="red">Games</font></th>
       </tr>
       <tr>
 	<td>
@@ -54,7 +54,8 @@
 	</td>
 	<td>
 	  <ul>
-	    <li>...</li>
+	    <li><a href="https://www.chiark.greenend.org.uk/~sgtatham/puzzles/"><font color="white">https://www.chiark.greenend.org.uk/~sgtatham/puzzles/</font></a></li>
+	    <li><a href="https://www.puzzlescript.net/"><font color="white">https://www.puzzlescript.net/</font></a></li>
 	  </ul>
 	</td>
       </tr>
