--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
   <head>
+    <meta charset="utf-8"/>
     <title>yayhoo</title>
   </head>
   <body background="stars.gif" text="white">
@@ -19,7 +20,8 @@
 	    <li><a href="http://news.ycombinator.com"><font color="white">news.ycombinator.com</font></a></li>
 	    <li><a href="http://ftp.rodents-montreal.org/mouse/blah/"><font color="white">ftp.rodents-montreal.org/mouse/blah/</font></a></li>
 	    <li><a href="http://idlewords.com/"><font color="white">idleworlds.com</font></a></li>
-	  </ul>
+ 	    <li><a href="http://www.lowtechmagazine.com/"><font color="white">lowtechmagazine.com</font></a></li>  
+	</ul>
 	</td>
 	<td>
 	  <ul>
