--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 	    <li><a href="http://news.ycombinator.com"><font color="white">news.ycombinator.com</font></a></li>
 	    <li><a href="http://ftp.rodents-montreal.org/mouse/blah/"><font color="white">ftp.rodents-montreal.org/mouse/blah/</font></a></li>
 	    <li><a href="http://idlewords.com/"><font color="white">idleworlds.com</font></a></li>
- 	    <li><a href="http://www.lowtechmagazine.com/"><font color="white">lowtechmagazine.com</font></a></li>  
+ 	    <li><a href="http://www.lowtechmagazine.com/"><font color="white">lowtechmagazine.com</font></a></li>
+	    <li><a href="http://wiki.c2.com/"><font color="white">wiki.c2.com</font></a></li>
 	</ul>
 	</td>
 	<td>
@@ -51,7 +52,7 @@
 	</td>
 	<td>
 	  <ul>
-	    <li><a href="thin.npr.org"><font color="white">thin.npr.org</font></a></li>
+	    <li><a href="http://thin.npr.org"><font color="white">thin.npr.org</font></a></li>
 	  </ul>
 	</td>
 	<td>
