--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	  <ul>
 	    <li><a href="http://slatestarcodex.com/"><font color="white">slatestarcodex.com</font></a></li>
 	    <li><a href="http://erasmatazz.com/"><font color="white">erasmatazz.com/</font></a></li>
+	    <li><a href="https://thecreativeindependent.com/"><font color="white">thecreativeindependent.com</font></a></li>  
 	  </ul>
 	</td>
       </tr>
