added dev.to, deprecated magic transistor :(

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 	    <li><a href="http://idlewords.com/"><font color="white">idleworlds.com</font></a></li>
  	    <li><a href="http://www.lowtechmagazine.com/"><font color="white">lowtechmagazine.com</font></a></li>
 	    <li><a href="http://wiki.c2.com/"><font color="white">wiki.c2.com</font></a></li>
+	    <li><a href="https://dev.to/"><font color="white">dev.to</font></a></li>
 	</ul>
 	</td>
 	<td>
 	  <ul>
-	    <li><a href="http://magictransistor.com/radio"><font color="white">magictransistor.com/radio</font></a></li>
+	    <li><font color="white">magictransistor.com/radio (RIP)</font></li>
 	    <li><a href="http://www.folkalley.com/"><font color="white">folkalley.com</font></a></li>
 	  </ul>
 	</td>
