--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	    <li><a href="http://slatestarcodex.com/"><font color="white">slatestarcodex.com</font></a></li>
 	    <li><a href="http://erasmatazz.com/"><font color="white">erasmatazz.com/</font></a></li>
 	    <li><a href="https://thecreativeindependent.com/"><font color="white">thecreativeindependent.com</font></a></li>  
+	    <li><a href="https://ansuz.sooke.bc.ca/"><font color="white">ansuz.sooke.bc.ca</font></a></li>	  
 	  </ul>
 	</td>
       </tr>
