--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
  	    <li><a href="http://www.lowtechmagazine.com/"><font color="white">lowtechmagazine.com</font></a></li>
 	    <li><a href="http://wiki.c2.com/"><font color="white">wiki.c2.com</font></a></li>
 	    <li><a href="https://dev.to/"><font color="white">dev.to</font></a></li>
-	</ul>
+	    <li><a href="https://www.filfre.net"><font color="white">filfre.net</font></a>
+        </ul>
 	</td>
 	<td>
 	  <ul>
